# folddisco

./: .gitignore  Cargo.toml  Dockerfile  NOTE.md  QUERY.md  README.md  build.rs  data.pt  emb.pt  mu.pt  perp.pt  quick_start.sh  recon_batch.pt  temp  temp.err  temp.kmeans.py  test_hash_type.txt  var.pt  yeast_centroids.tsv
.claude/commands/: build-index.md
.github/workflows/: docker.yml  test.yml
data/: answer_P00766.csv  benchmark.tsv  configs.toml  encoder.safetensors  homeobox_hash_disc.tsv  homeobox_hash_per_pair.tsv  homeobox_hash_per_pair_temp.xlsx  homeobox_hash_raw. tsv  homeobox_index_table.tsv  homeobox_vae_per_pair_hash.tsv  huge_map  index_config.toml  index_table_test.txt  merops_id_vec.tsv  merops_pdb_hash_active_site.tsv  queried_P00766  query.tsv  query_config.toml  serine_folddisco.tsv  serine_hash_per_pair.tsv  serine_hash_per_pair_annotated.tsv  serine_pyscomotif.tsv  serine_vae_per_pair_hash_filtered.tsv  table.json  temp.pca.py  temp.vec.data  temp.vec.data.tsv  test_write_hashmap_to_file  tr_vae.ot  tr_vae2.ot  vae_hash_table.tsv  vae_hash_table_rounded.tsv  vae_weights.ot  yeast_index_table.tsv  zinc_answer.tsv  zinc_folddisco.tsv
data/chimerax_script/: homeobox_chimera.cxc
data/cys_his_asp/: info_cyshisasp.tsv
data/foldcomp/: 7m0y.fcz
data/homeobox/: info.tsv  temp.tsv
data/ref/: 6d_loss.py  controller_mod.rs  folddisco_index.h  io.rs  main.h  temp_query.rs
data/serine_peptidase_resampling/: info.tsv
data/serine_peptidases_filtered/: info_serhisasp.tsv
data/vae_weight/: vae_encoder_hidden20.safetensors  vae_encoder_hidden64.safetensors
example/: README.md  benchmark.rs  check_feature_distribution.rs  data_prep.rs  get_pdb_feature.rs  index_io.rs  index_io_deprecated.rs  index_io_old.rs  kmeans.rs  pytorch_vae.rs  trrosetta_hash.rs  trrosetta_reduced.rs  trrosetta_vae_hash_serinepeptidase_test.rs  vae_pytorch.rs
example/vae_test/: 01.rs
lib/foldcomp/: CMakeLists.txt  bindings.rs  foldcompffi.cpp  foldcompffi.h
lib/pdbtbx-cif/: Cargo.toml
lib/pdbtbx-cif/src/: error.rs  lex_item.rs  lib.rs
lib/pico-args/: Cargo.toml  LICENSE
query/: aminopeptidase.txt  enolase.txt  knottin.txt  serine_peptidase.txt  zinc_finger.txt  zinc_finger_with_output.txt
scripts/: convert_pt_to_safetensor.py  create_motif_annotation_from_cluster_list.sh  fit_foldcomp_lookup_into_index.sh
scripts/chimerax_script/: cystein_proteases_chimera.cxc  serine_peptidases_chimera.cxc
src/: controller.rs  lib.rs  main.rs  test.rs
src/cli/: config.rs  main.rs  mod.rs  picoargs.rs
src/controller/: count_query.rs  feature.rs  filter.rs  graph.rs  io.rs  map.rs  mod.rs  mode.rs  new_mod.rs  oldrank.rs  query.rs  query_result.rs  rank.rs  result.rs  retrieve.rs  sort.rs  summary.rs
src/geometry/: aa_pair.rs  core.rs  custom.rs  default.rs  default_32.rs  default_32bit.rs  feature.rs  folddisco_angle.rs  folddisco_dist.rs  hash.rs  hash_func.rs  hybrid.rs  mod.rs  pdb_halfmatch.rs  pdb_motif.rs  pdb_motif_sincos.rs  pdb_tr.rs  ppf.rs  simple_hash.rs  tertiary_interaction.rs  triad_hash.rs  trrosetta.rs  trrosetta_32bit.rs  trrosetta_reduced.rs  trrosetta_subfamily.rs  trrosetta_subfamily_new.rs  trrosetta_subfamily_old.rs  util.rs
src/index/: alloc.rs  builder.rs  delta.rs  index_table.rs  indextable.rs  io.rs  lookup.rs  map.rs  mod.rs  new_alloc.rs  new_index_table.rs
src/structure/: atom.rs  chain_id.rs  coordinate.rs  core.rs  distance_graph.rs  feature.rs  grid.rs  hks.rs  icp.rs  kabsch.rs  lms_qcp.rs  metrics.rs  mod.rs  point_to_plane.rs  qcp.rs
src/utils/: benchmark.rs  calculator.rs  cli.rs  combination.rs  constants.rs  convert.rs  discretizer.rs  log.rs  (+4 more)
tests/: allocation_test.rs  controller_test.rs  hash_test.rs  pytorch_vae.rs  test_folddisco_indices.sh  toydata_test.rs  train.rs  vae.rs
train/: data_prep.rs  kmeans.rs
(+49 files in other folders)
