[package]
name = "motifsearch"
version = "0.1.0"
edition = "2021"
authors = ["Hyunbin Kim <khb7840@gmail.com>", "Rachel Kim <seamustard52@gmail.com>"]
description = "A bioinformatics tool for finding discontinuous motifs in protein structures"
repository = "https://github.com/steineggerlab/motifsearch"


# test optimization
[profile.test]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "motifsearch"
path = "src/cli/main.rs"

[[example]]
name = "pdb_feature"
path = "example/get_pdb_feature.rs"

[[example]]
name = "e_coli"
path = "example/e_coli.test.rs"

[[example]]
name = "feature_distribution"
path = "example/check_feature_distribution.rs"

[dependencies]
rand = "0.8.5"
pico-args = { version = "0.5.0", features = ["combined-flags"], path = "lib/pico-args" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3.3"
rustc-hash = "1.1.0"
rayon = "1.8.0"
