[package]
name = "folddisco"
version = "1.0.0"
edition = "2021"
authors = ["Hyunbin Kim <khb7840@gmail.com>", "Rachel Kim <seamustard52@gmail.com>"]
description = "A bioinformatics tool for finding discontinuous motifs in protein structures"
repository = "https://github.com/steineggerlab/folddisco"


# test optimization
[profile.test]
# opt-level = 1 # When debugging, use this.
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "folddisco"
path = "src/cli/main.rs"

[dependencies]
rand = "0.8.5"
pico-args = { version = "0.5.0", features = ["combined-flags"], path = "lib/pico-args" }
rayon = "1.8.0"
byteorder = "1.5.0"
memmap2 = "0.9.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
rustc-hash = "1.1.0"
peak_alloc = "0.2.1"
flate2 = { version = "1.0.28" }
toml = "0.8.12"
regex = "1.10.4"
petgraph = "0.6.4"
libc = "0.2.155"


[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
cmake = { version = "0.1.50", optional = true }


[features]
foldcomp = ["bindgen", "cmake"]